--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,46 +10,45 @@ dependencies:
   flutter:
     sdk: flutter
   
-  # HTTP & API
-  http: ^1.1.2
-  dio: ^5.4.0
-  
-  # QR Code Scanning
-  qr_code_scanner: ^1.0.1
-  mobile_scanner: ^3.5.6
-  
-  # Camera & OCR
-  camera: ^0.10.5+9
-  google_mlkit_text_recognition: ^0.10.0
-  
-  # UI & State Management
-  provider: ^6.1.1
-  flutter_riverpod: ^2.4.9
-  
-  # Local Storage & Preferences
-  shared_preferences: ^2.2.2
-  hive: ^2.2.3
+  # Core dependencies
+  provider: ^6.1.2
   hive_flutter: ^1.1.0
+  http: ^1.2.1
+  connectivity_plus: ^6.0.5
+  permission_handler: ^11.3.1
+  path_provider: ^2.1.4
+  share_plus: ^10.0.2
   
-  # Permissions & Device Info
-  permission_handler: ^11.1.0
-  device_info_plus: ^9.1.1
-  connectivity_plus: ^5.0.2
+  # QR and Camera
+  mobile_scanner: ^5.2.3
+  camera: ^0.11.0+2
+  
+  # OCR/Text Recognition - Updated to compatible version
+  google_mlkit_text_recognition: ^0.13.1
+  
+  # Other dependencies
+  uuid: ^4.5.1
+  intl: ^0.19.0
+  logger: ^2.4.0
+  shimmer: ^3.0.0
   
   # UI Components
   cupertino_icons: ^1.0.6
   fluttertoast: ^8.2.4
-  shimmer: ^3.0.0
+  
+  # Local Storage & Preferences
+  shared_preferences: ^2.2.2
+  hive: ^2.2.3
   
   # Utilities
-  intl: ^0.18.1
-  uuid: ^4.2.1
-  
-  # Logging & File Operations
-  logger: ^2.0.2+1
-  path_provider: ^2.1.1
-  share_plus: ^7.2.1
   file_picker: ^6.1.1
+  device_info_plus: ^9.1.1
+  
+  # HTTP & API (keeping dio for advanced features)
+  dio: ^5.4.0
+  
+  # UI & State Management (keeping riverpod for advanced state)
+  flutter_riverpod: ^2.4.9
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +56,9 @@ dev_dependencies:
   flutter_lints: ^3.0.1
   hive_generator: ^2.0.1
   build_runner: ^2.4.7
+
+dependency_overrides:
+  google_mlkit_commons: ^0.7.1
 
 flutter:
   uses-material-design: true
