Fix grey banner in submitted tab and item name display + Add launcher icons
- Remove grey filter banner from Scanned/Submitted tab
- Fix item name display in submitted batches (use itemName instead of productName)
- Add flutter_launcher_icons configuration and generate app icons
- Update tab controller to rebuild UI when switching tabs

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,9 +56,25 @@ dev_dependencies:
   flutter_lints: ^3.0.1
   hive_generator: ^2.0.1
   build_runner: ^2.4.7
+  flutter_launcher_icons: ^0.13.1
 
 dependency_overrides:
   google_mlkit_commons: ^0.7.1
 
 flutter:
   uses-material-design: true
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "logo/icon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "logo/icon.png"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+  windows:
+    generate: true
+    image_path: "logo/icon.png"
+    icon_size: 48 # min:48, max:256, default: 48
