--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,9 @@ dependency_overrides:
 
 flutter:
   uses-material-design: true
+  
+  assets:
+    - assets/logo/
 
 flutter_launcher_icons:
   android: "launcher_icon"
